tests/examples/py_function/compiler_error/solution.py
def multiply(a, b)
    return a * b # Missing colon
